# DIP_1

./: CMakeLists.txt  ImgPcAlg.cpp  ImgPcAlg.h  ImgPcAlg_2.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  roi.cpp  task.cpp  task.h
